--- a/client/client.html
+++ b/client/client.html
@@ -21,7 +21,7 @@
       <div id="buttons">
         <button type="button" class="btn btn-primary" id="takeoff" style="width:24%">takeoff</button>
         <button type="button" class="btn btn-primary" id="land"style="width:24%">land</button>
-        <button type="button" class="btn btn-primary" id="revcover"style="width:24%">recover</button>
+        <button type="button" class="btn btn-primary" id="revcover"style="width:24%">recovering</button>
         <button type="button" class="btn btn-primary" id="stop"style="width:25%">stop!!</button>
       </div>
       <div id="navbutton">
